RemoteEntityConnection moved from framework.db to framework.db.remote, server now depends on db-remote, test moved
git-svn-id: svn://svn.hafro.is/jminor/trunk@8471 51816742-9f83-410d-85ed-e7bcf7042953